--- a/index.html
+++ b/index.html
@@ -7,17 +7,52 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
+
+    <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
     <title>Alpine Todo</title>
 </head>
 <body class="container bg-pink">
     <main class="row justify-content-center my-5 py-5">
         <div class="card col-lg-5 px-5 py-5 shadow-sm bg-trans">
-            <h2 class="text-center">Todos</h2>
-            <ul class="list-group mt-3">
-                <li class="list-group-item">First Item</li>
+            <div class="d-flex justify-content-between align-items-center">
+                <h2>Todos</h2>
+                <div>
+                    <span class="badge bg-danger rounded-pill">Cancelled</span>
+                    <span class="badge bg-success rounded-pill">Completed</span>
+                </div>
+            </div>
+            <ul class="list-group mt-3" x-data="{ todos: [
+                {
+                    'name': 'Write an article',
+                    'status': 'completed' // Or cancelled, open
+                },
+                {
+                    'name': 'Write an article',
+                    'status': 'open' // Or cancelled, open
+                },
+                {
+                    'name': 'Write an article',
+                    'status': 'cancelled' // Or cancelled, open
+                }
+            ]}">
+                <template x-for="todo in todos" x-data="{ list_class: ' list-group-item d-flex justify-content-between align-items-center' }">
+                    <li x-bind:class="todo.status === 'completed' ? 'list-group-item-success' + list_class : todo.status === 'cancelled' ? 'list-group-item-danger' + list_class : list_class" x-text="todo.name">
+                        First Item
+                        <div>
+                            <span class="badge bg-success rounded">
+                                <i class="fas fa-check-circle text-white"></i>
+                            </span>
+                            <span class="badge bg-danger rounded">
+                                <i class="fas fa-window-close text-white"></i>
+                            </span>
+                        </div>
+                    </li>
+                </template>
             </ul>
+            <button type="button" class="btn btn-primary form-control mt-2">Add New Todo</button>
         </div>
     </main>
 
